--- a/package.json
+++ b/package.json
@@ -94,7 +94,8 @@
 		"vanilla-cookieconsent": "^3.0.1",
 		"vite": "^5.4.11",
 		"world-countries": "^5.0.0",
-		"zod": "^3.24.1"
+		"zod": "^3.24.1",
+		"pdf-lib": "^1.17.1"
 	},
 	"private": true,
 	"scripts": {
@@ -109,8 +110,5 @@
 		"format": "prettier --write .",
 		"add-translation": "bun run scripts/add_new_translation.ts"
 	},
-	"type": "module",
-	"dependencies": {
-		"pdf-lib": "^1.17.1"
-	}
+	"type": "module"
 }
