--- a/package.json
+++ b/package.json
@@ -107,7 +107,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"add-translation": "bun run scripts/add_new_translation.ts"
+		"add-translation": "bun run scripts/add_new_translation.ts",
+    "install-git-hooks": "bunx lefthook install"
 	},
 	"type": "module",
 	"dependencies": {
