✨ Feature : Download Conference contract  (#212)
* feat(pdf-generator): add multi-page PDF generation functionality with pdf-lib

* added functionality for creating a sample multi page pdf and downloading it

* ✨ feature: Implement registration form PDF generation with structured data and checkbox

* completed the contract pdf content generation

* formatting

* ✨ refactor: Improve PDF font handling and adjust spacing in consent form

* ✨ refactor: Introduce PDFHeader class for improved header management and update PDF page generation to utilize the new structure

* ✨ refactor: Clean up PDFHeader class and improve formatting in PDF generation function

* ✨ refactor: Remove unused drawHeader method from PDFUtils class

* ✨ refactor: Add age parameter to PDF generation and conditionally include parental consent page

* ✨ refactor: Update PDF generation to conditionally include parental consent page based on age

* ✨ refactor: Add blue color to page styles and update PDF header color to use the new style

* ✨ refactor: Enhance PDF generation by adding recipient information and updating address handling

* ✨ refactor: Standardize formatting of recipientInfo object in PDF generation

* adding the ui for geenrating the pdfs from postal registration page

* ✨ feature: Implement PDF generation functionality in postal registration

* pdf generation basic flow complete

* added functions for calculating the age of the user

* ✨ feature: Update PDF generation to use age verification logic

* removed the generate pdf button from the root page

* queried user from his id instead of email

* chagned the receipiant info to conference

* fixed the indexes of the contracts

* refactor PDFPageGenerator constructor and formatting for improved readability

* Add user information handling to PDF generation process

* Refactor whitespace in PDF generation for improved readability

* changes the page rendered in case of adult participiant

* 🐞 fix: typo

* 🧼 format & lint

---------

Co-a

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
 		"validator": "^13.12.0",
 		"vanilla-cookieconsent": "^3.0.1",
 		"vite": "^5.4.11",
+		"pdf-lib": "^1.17.1",
 		"world-countries": "^5.1.0",
 		"zod": "^3.24.1"
 	},
@@ -108,7 +109,7 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"add-translation": "bun run scripts/add_new_translation.ts",
-    "install-git-hooks": "bunx lefthook install"
+		"install-git-hooks": "bunx lefthook install"
 	},
 	"type": "module",
 	"dependencies": {
