✨ feature: Contract Documents (#222)
* ✨ feature: implement PDF download for complete postal registration with updated data handling

* ✨ feature: add postal registration page with barcode scanning functionality and update dependencies

* ✨ feature: add postal registration page with barcode scanning functionality and update dependencies

* ✨ feature: add download functionality for postal registration documents and update translations

* ✨ feature: update postal registration instructions and FAQs in multiple languages

* ✨ feature: add contract content handling and update PDF generation for postal registration

* ✨ feature: increase maximum upload size for contract and consent files to 10MB

* ✨ chore: remove unused PDF generation code from test.ts

* ✨ feature: add functionality to change participant status and update postal registration UI with new translations

* 🧼 format & lint

* ✨ chore: update package.json to add hotkeys-js dependency and adjust heading styles in postal registration UI

* ✨ chore: update package.json to add hotkeys-js dependency and adjust heading styles in postal registration UI

* ✨ feature: add onDestroy lifecycle method to stop video streaming on component destruction

* ✨ feature: enhance postal registration UI with hotkey support for status changes and update translations

* ✨ feature: conditionally display hotkey in StatusWidget component

* ✨ chore: sort package.json

* 🧼 format & lint

* chore: update translations with Fink 🐦

* Merge branch 'main' into contract-things

* fix: Update file handling in conference settings form to support both File objects and strings

* feat: Add media consent status functionality and update related components

* fix: Update scanPostalRegistrationCode instructions to include option for confirming with '4'

* chore: Remove commented-out prisma_studio configuration from docker-compose

* chore: Remove commented-out prisma_studio configuration from docker-compose

* fix: Update downloadPostalDocuments logi

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-	"name": "munify-delegator",
-	"version": "0.0.1",
+	"dependencies": {
+		"with-csv": "^2.0.0"
+	},
 	"devDependencies": {
+		"@bwip-js/browser": "^4.5.3",
 		"@casl/ability": "^6.7.2",
 		"@casl/prisma": "^1.5.0",
 		"@dipser/epc-qr-code.js": "^1.0.3",
@@ -42,6 +44,7 @@
 		"@weblogin/trendchart-elements": "^2.0.1",
 		"@zerodevx/svelte-toast": "^0.9.6",
 		"autoprefixer": "^10.4.20",
+		"barcode-detector": "^3.0.1",
 		"codenamize-ts": "1.0.2",
 		"concurrently": "^9.1.2",
 		"convert-iso-codes": "^1.0.10",
@@ -57,6 +60,7 @@
 		"globals": "^15.14.0",
 		"graphql": "^16.10.0",
 		"graphql-yoga": "^5.10.8",
+		"hotkeys-js": "^3.13.9",
 		"houdini": "^1.4.0",
 		"houdini-svelte": "^2.1.0",
 		"iban": "^0.0.14",
@@ -73,6 +77,7 @@
 		"openapi-fetch": "^0.13.4",
 		"openapi-typescript": "^7.5.1",
 		"openid-client": "^6.1.7",
+		"pdf-lib": "^1.17.1",
 		"postcss": "^8.4.49",
 		"postcss-load-config": "^6.0.1",
 		"prettier": "^3.4.2",
@@ -93,26 +98,24 @@
 		"validator": "^13.12.0",
 		"vanilla-cookieconsent": "^3.0.1",
 		"vite": "^5.4.11",
-		"pdf-lib": "^1.17.1",
 		"world-countries": "^5.1.0",
 		"zod": "^3.24.1"
 	},
+	"name": "munify-delegator",
 	"private": true,
 	"scripts": {
-		"dev": "concurrently \"bun run dev:server\" \"bun run dev:docker\"",
-		"dev:server": "while true; do svelte-kit sync && vite; echo 'Server crashed, restarting...'; sleep 1; done",
-		"dev:docker": "docker compose -f ./dev.docker-compose.yml up",
+		"add-translation": "bun run scripts/add_new_translation.ts",
 		"build": "vite build && bun ./scripts/tasksBuild.ts",
-		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
+		"dev": "concurrently \"bun run dev:server\" \"bun run dev:docker\"",
+		"dev:docker": "docker compose -f ./dev.docker-compose.yml up",
+		"dev:server": "while true; do svelte-kit sync && vite; echo 'Server crashed, restarting...'; sleep 1; done",
 		"format": "prettier --write .",
-		"add-translation": "bun run scripts/add_new_translation.ts",
-		"install-git-hooks": "bunx lefthook install"
+		"install-git-hooks": "bunx lefthook install",
+		"lint": "prettier --check . && eslint .",
+		"preview": "vite preview"
 	},
 	"type": "module",
-	"dependencies": {
-		"with-csv": "^2.0.0"
-	}
+	"version": "0.0.1"
 }
