--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
 	"dependencies": {
+		"@types/node-forge": "^1.3.11",
+		"node-forge": "^1.3.1",
 		"with-csv": "^2.0.0"
 	},
 	"devDependencies": {
