chore: Update .env.example to include certificate secret configuration

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@ OIDC_ROLE_CLAIM=urn:zitadel:iam:org:project:275671427955294244:roles
 PUBLIC_FEEDBACK_URL=https://fb-delegator.dmun.de
 
 # OTEL_ENDPOINT_URL=http://localhost:4318/v1/traces
+
+CERTIFICATE_SECRET="<yourSecret>" # Replace with your own secret key for signing certificates / run `openssl rand -base64 32`
