--- a/package.json
+++ b/package.json
@@ -116,7 +116,8 @@
 		"format": "prettier --write .",
 		"install-git-hooks": "bunx lefthook install",
 		"lint": "prettier --check . && eslint .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"studio": "prisma studio"
 	},
 	"type": "module",
 	"version": "0.0.1"
