🐞 fix: preview env missing

--- a/.github/workflows/build_run.yml
+++ b/.github/workflows/build_run.yml
@@ -13,6 +13,7 @@ jobs:
       - run: bun install --frozen-lockfile
       - run: bun run build
       - run: bun run check
+      - run: cp ./.env.example .env
       - run: |
           bun run preview &
           sleep 10
