--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 PORT=3000
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
 SECRET=123
+NODE_ENV=development
 
 PUBLIC_OIDC_AUTHORITY=http://localhost:8080/default/.well-known/openid-configuration
 # PUBLIC_OIDC_AUTHORITY=https://guard.munify.cloud
