--- a/.github/workflows/build_run.yml
+++ b/.github/workflows/build_run.yml
@@ -13,8 +13,9 @@ jobs:
       - run: bun install --frozen-lockfile
       - run: bun run build
       - run: bun run check
-      - run: cp ./.env.example .env
-      - run: |
-          bun run preview &
-          sleep 10
-          curl -f http://localhost:4173
+      # TODO
+      # - run: cp ./.env.example .env
+      # - run: |
+      #     bun run preview &
+      #     sleep 10
+      #     curl -f http://localhost:4173
