--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@fontsource/outfit": "^5.2.5",
 		"@fontsource/roboto-mono": "^5.2.5",
 		"@fontsource/vollkorn": "^5.2.6",
+		"@inlang/cli": "^3.0.11",
 		"@inlang/paraglide-js": "2.0.12",
 		"@magidoc/plugin-svelte-marked": "^6.2.0",
 		"@opentelemetry/exporter-trace-otlp-http": "^0.57.2",
@@ -96,12 +97,12 @@
 		"tsup": "^8.4.0",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.31.0",
+		"uuid": "^11.1.0",
 		"validator": "^13.15.0",
 		"vanilla-cookieconsent": "^3.1.0",
 		"vite": "^6.3.3",
 		"world-countries": "^5.1.0",
-		"zod": "^3.24.3",
-		"@inlang/cli": "^3.0.11"
+		"zod": "^3.24.3"
 	},
 	"name": "munify-delegator",
 	"private": true,
