--- a/Dockerfile.node
+++ b/Dockerfile.node
@@ -1,16 +1,27 @@
-FROM oven/bun:1.2 AS builder
-WORKDIR /app
+FROM oven/bun:1.2-slim AS base
+
+FROM base AS dependencies
+WORKDIR /build/dependencies
+COPY package.json bun.lockb tsconfig.json ./
+RUN bun install --frozen-lockfile
+
+FROM base AS runtime-dependencies
+WORKDIR /build/dependencies
+COPY package.json bun.lockb tsconfig.json ./
+RUN bun install --frozen-lockfile --production
+
+FROM base AS builder
+WORKDIR /build/staging
 
 ARG VERSION
 ENV PUBLIC_VERSION=$VERSION
 ARG SHA
 ENV PUBLIC_SHA=$SHA
 
-RUN apt-get update && apt-get install -y jq
 
-COPY package.json bun.lockb tsconfig.json ./
-RUN  bun install --frozen-lockfile
-# we need to generate prisma files before building to prevent type errors
+COPY --from=dependencies /build/dependencies .
+COPY --from=runtime-dependencies /build/dependencies .
+
 COPY ./prisma/migrations ./prisma/migrations/
 COPY ./prisma/schema.prisma ./prisma/schema.prisma
 COPY ./prisma/pothos.config.cjs ./prisma/pothos.config.cjs
@@ -25,25 +36,18 @@ RUN bun run check
 # remove all dependencies which are unused
 # TODO https://github.com/oven-sh/bun/issues/3605
 
-RUN jq '.type="commonjs"' package.json > tmp.json && mv tmp.json package.json
-
 FROM node:24.0-slim AS release
-WORKDIR /app
+WORKDIR /app/release
 
 ARG VERSION
 ENV PUBLIC_VERSION=$VERSION
 ARG SHA
 ENV PUBLIC_SHA=$SHA
 
-# the runtime dependencies
-COPY --from=builder /app/node_modules ./node_modules/
-
-# the sveltekit output
-COPY --from=builder /app/build .
-# the tasks build output
-COPY --from=builder /app/tasksOut .
-# the prisma schema and migrations
-COPY --from=builder /app/prisma ./prisma/
+COPY --from=builder /build/staging/build .
+COPY --from=builder /build/staging/tasksOut .
+COPY --from=builder /build/staging/prisma ./prisma/
+COPY --from=runtime-dependencies /build/dependencies .
 
 # TODO check if user is created
 
@@ -56,4 +60,4 @@ ENV NODE_ENV=production
 USER node
 EXPOSE 3000/tcp
 # HEALTHCHECK --interval=15s --timeout=10s --retries=3 CMD curl -f http://0.0.0.0:3000/api/health/ready || exit 1
-CMD ["sh", "-c", "npx prisma migrate deploy && node ./index.js"]
+CMD ["sh", "-c", "npx prisma migrate deploy && node ."]
