--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -15,7 +15,7 @@ services:
 
   delegator:
     image: dddd/delegator:latest
-    command: ["sh", "-c", "ls -l && npx prisma migrate deploy && node ./index.js"]
+    command: ['sh', '-c', 'ls -l && npx prisma migrate deploy && node ./index.js']
     depends_on:
       - postgres
     ports:
