--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"dependencies": {
 		"@types/node-forge": "^1.3.11",
+		"caniuse-lite": "^1.0.30001734",
 		"node-forge": "^1.3.1",
 		"with-csv": "^2.0.0"
 	},
@@ -90,6 +91,7 @@
 		"replace-special-characters": "^1.2.7",
 		"svelte": "^5.28.2",
 		"svelte-check": "^4.1.6",
+		"svelte-french-toast": "^1.2.0",
 		"svelte-table": "^0.6.4",
 		"sveltekit-breadcrumbs": "^0.0.3",
 		"sveltekit-superforms": "^2.24.1",
