--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ PUBLIC_OIDC_AUTHORITY=http://localhost:8080/default/.well-known/openid-configura
 PUBLIC_OIDC_CLIENT_ID=default
 # PUBLIC_OIDC_CLIENT_ID=275671515582758948@dev
 
+PUBLIC_GLOBAL_USER_NOTES_ACTIVE=true
+
 OIDC_ROLE_CLAIM=urn:zitadel:iam:org:project:275671427955294244:roles
 PUBLIC_FEEDBACK_URL=https://fb-delegator.dmun.de
 
