use correct refname for docker build arg

--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -81,7 +81,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
-            VERSION=${{ github.event.release.tag_name }}
+            VERSION=${{ github.ref_name }}
             SHA=${{ github.sha }}
 
       - name: Get first built image ref
@@ -110,7 +110,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           build-args: |
-            VERSION=${{ github.event.release.tag_name }}
+            VERSION=${{ github.ref_name }}
             SHA=${{ github.sha }}
 
       - name: Create GitHub Release
