--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
 		"with-csv": "^2.0.0"
 	},
 	"devDependencies": {
-		"caniuse-lite": "^1.0.30001734",
 		"@bwip-js/browser": "^4.6.0",
 		"@casl/ability": "^6.7.3",
 		"@casl/prisma": "^1.5.1",
@@ -48,6 +47,7 @@
 		"@zerodevx/svelte-toast": "^0.9.6",
 		"autoprefixer": "^10.4.21",
 		"barcode-detector": "^3.0.1",
+		"caniuse-lite": "^1.0.30001734",
 		"codenamize-ts": "1.0.2",
 		"concurrently": "^9.1.2",
 		"convert-iso-codes": "^1.0.10",
@@ -94,6 +94,7 @@
 		"svelte-french-toast": "^1.2.0",
 		"svelte-table": "^0.6.4",
 		"sveltekit-breadcrumbs": "^0.0.3",
+		"sveltekit-search-params": "^3.0.0",
 		"sveltekit-superforms": "^2.24",
 		"tailwindcss": "^3.4.17",
 		"tsup": "^8.4.0",
