--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"dependencies": {
 		"@types/node-forge": "^1.3.11",
 		"node-forge": "^1.3.1",
+		"svelte-inspect-value": "^0.8.0-next.8",
 		"with-csv": "^2.0.0"
 	},
 	"devDependencies": {
@@ -92,6 +93,7 @@
 		"svelte": "^5.28.2",
 		"svelte-check": "^4.1.6",
 		"svelte-french-toast": "^1.2.0",
+		"svelte-qrcode": "^1.0.1",
 		"svelte-table": "^0.6.4",
 		"sveltekit-breadcrumbs": "^0.0.3",
 		"sveltekit-search-params": "^3.0.0",
