--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,7 @@
 {
 	"editor.suggest.showReferences": false,
 	"files.eol": "\n",
-	"vscodeGitCommit.template": [
-		"{prefix}: {message}"
-	],
+	"vscodeGitCommit.template": ["{prefix}: {message}"],
 	"[javascript]": {},
 	"editor.codeActionsOnSave": {},
 	"vscodeGitCommit.variables": {
@@ -86,7 +84,5 @@
 			"name": "OpenI18n"
 		}
 	],
-	"css.customData": [
-		".vscode/tailwind.json"
-	]
+	"css.customData": [".vscode/tailwind.json"]
 }
