--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-	"dependencies": {},
+	"dependencies": {
+		"svelte-kit": "^1.2.0"
+	},
 	"devDependencies": {
 		"@bwip-js/browser": "^4.6.0",
 		"@casl/ability": "^6.7.3",
@@ -62,8 +64,8 @@
 		"graphql": "^16.10.0",
 		"graphql-yoga": "^5.13.4",
 		"hotkeys-js": "^3.13.9",
-		"houdini": "^1.5.5",
-		"houdini-svelte": "^2.1.15",
+		"houdini": "^2.0.0-next.9",
+		"houdini-svelte": "^2.1.20",
 		"iban": "^0.0.14",
 		"inquirer": "^12.6.0",
 		"jose": "^6.0.10",
@@ -103,7 +105,7 @@
 		"uuid": "^11.1.0",
 		"validator": "^13.15.0",
 		"vanilla-cookieconsent": "^3.1.0",
-		"vite": "^6.3.3",
+		"vite": "^6.3.6",
 		"with-csv": "^2.0.0",
 		"world-countries": "^5.1.0",
 		"zod": "^3.24.3"
