🐞 fix: type & svelte checker errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
 		"allowJs": true,
+		"noImplicitAny": false,
 		"checkJs": true,
 		"module": "ESNext", // or "CommonJS"
 		"target": "ESNext", // or "ES6"
