--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
 		"svelte-table": "^0.6.4",
 		"sveltekit-breadcrumbs": "^0.0.3",
 		"sveltekit-search-params": "^3.0.0",
-		"sveltekit-superforms": "^2.24",
+		"sveltekit-superforms": "2.24",
 		"tailwindcss": "^3.4.17",
 		"tsup": "^8.4.0",
 		"typescript": "^5.8.3",
@@ -108,7 +108,8 @@
 		"vite": "^6.3.6",
 		"with-csv": "^2.0.0",
 		"world-countries": "^5.1.0",
-		"zod": "^3.24.3"
+		"zod": "3.24.3",
+		"zod-to-json-schema": "^3.24.6"
 	},
 	"name": "munify-delegator",
 	"private": true,
