feature: Rework supervisors to be related to single users instead of delegation entities (#246)
Co-authored-by: Tade Strehk <github@strehk.eu>
Co-authored-by: Tade Strehk <git@strehk.eu>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+	"editor.suggest.showReferences": false,
 	"files.eol": "\n",
 	"vscodeGitCommit.template": ["{prefix}: {message}"],
 	"[javascript]": {},
