feat: add length to application texts

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ PUBLIC_OIDC_CLIENT_ID=default
 # PUBLIC_OIDC_CLIENT_ID=275671515582758948@dev
 
 PUBLIC_GLOBAL_USER_NOTES_ACTIVE=true
+PUBLIC_MAX_APPLICATION_TEXT_LENGTH=1200
 
 OIDC_ROLE_CLAIM=urn:zitadel:iam:org:project:275671427955294244:roles
 PUBLIC_FEEDBACK_URL=https://fb-delegator.dmun.de
