--- a/package.json
+++ b/package.json
@@ -61,11 +61,11 @@
 		"flag-icons": "^7.3.2",
 		"fuse.js": "^7.1.0",
 		"globals": "^15.15.0",
-		"graphql": "^16.10.0",
+		"graphql": "^16.11.0",
 		"graphql-yoga": "^5.13.4",
 		"hotkeys-js": "^3.13.9",
 		"houdini": "^2.0.0-next.9",
-		"houdini-svelte": "^2.1.20",
+		"houdini-svelte": "^3.0.0-next.13",
 		"iban": "^0.0.14",
 		"inquirer": "^12.6.0",
 		"jose": "^6.0.10",
@@ -105,7 +105,7 @@
 		"uuid": "^11.1.0",
 		"validator": "^13.15.0",
 		"vanilla-cookieconsent": "^3.1.0",
-		"vite": "^6.3.6",
+		"vite": "^7.0.0",
 		"with-csv": "^2.0.0",
 		"world-countries": "^5.1.0",
 		"zod": "^3.24.3",
