🧹 chore: update tailwind

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
 		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/kit": "^2.20",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/typography": "^0.5.16",
+		"@tailwindcss/typography": "^0.5.18",
+		"@tailwindcss/vite": "^4.1.0",
 		"@thisux/sveltednd": "^0.0.20",
 		"@types/eslint": "^9.6.1",
 		"@types/iban": "^0.0.35",
@@ -45,7 +46,6 @@
 		"@types/node-schedule": "^2.1.7",
 		"@weblogin/trendchart-elements": "^2.0.1",
 		"@zerodevx/svelte-toast": "^0.9.6",
-		"autoprefixer": "^10.4.21",
 		"barcode-detector": "^3.0.1",
 		"caniuse-lite": "^1.0.30001734",
 		"codenamize-ts": "1.0.2",
@@ -53,7 +53,7 @@
 		"convert-iso-codes": "^1.0.10",
 		"cryptr": "^6.3.0",
 		"csv-stringify": "^6.5.2",
-		"daisyui": "^4.12.24",
+		"daisyui": "^5.1.14",
 		"date-fns": "^4.1.0",
 		"eslint": "^9.25.1",
 		"eslint-config-prettier": "^10.1.2",
@@ -98,7 +98,7 @@
 		"sveltekit-breadcrumbs": "^0.0.3",
 		"sveltekit-search-params": "^3.0.0",
 		"sveltekit-superforms": "^2.27.1",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.1.0",
 		"tsup": "^8.4.0",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.31.0",
