--- a/package.json
+++ b/package.json
@@ -1,139 +1,140 @@
 {
-  "dependencies": {
-    "svelte-kit": "^1.2.0"
-  },
-  "devDependencies": {
-    "@bwip-js/browser": "^4.6.0",
-    "@casl/ability": "^6.7.3",
-    "@casl/prisma": "^1.5.1",
-    "@deutschemodelunitednations/corporate-identity": "^1.1.8",
-    "@dipser/epc-qr-code.js": "^1.0.3",
-    "@eslint/compat": "^1.2.8",
-    "@faker-js/faker": "^9.9.0",
-    "@fontsource/outfit": "^5.2.5",
-    "@fontsource/roboto-mono": "^5.2.5",
-    "@fontsource/vollkorn": "^5.2.6",
-    "@inlang/cli": "^3.0.12",
-    "@inlang/paraglide-js": "2.3.2",
-    "@magidoc/plugin-svelte-marked": "^6.2.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.57.2",
-    "@opentelemetry/instrumentation": "^0.57.2",
-    "@opentelemetry/instrumentation-http": "^0.57.2",
-    "@opentelemetry/sdk-trace-node": "^1.30.1",
-    "@opentelemetry/semantic-conventions": "^1.32.0",
-    "@pothos/core": "^4.6.0",
-    "@pothos/plugin-complexity": "^4.1.0",
-    "@pothos/plugin-prisma": "^4.6.0",
-    "@pothos/plugin-prisma-utils": "^1.3.0",
-    "@pothos/plugin-simple-objects": "^4.1.1",
-    "@pothos/plugin-tracing": "^1.1.0",
-    "@pothos/tracing-opentelemetry": "^1.1.0",
-    "@prisma/client": "^6.6.0",
-    "@prisma/instrumentation": "^6.6.0",
-    "@slack/webhook": "^7.0.5",
-    "@svelte-plugins/datepicker": "^1.0.11",
-    "@svelte-put/qr": "^2.1.0",
-    "@sveltejs/adapter-node": "^5.2.12",
-    "@sveltejs/kit": "^2.20",
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tailwindcss/typography": "^0.5.18",
-    "@tailwindcss/vite": "^4.1.0",
-    "@thisux/sveltednd": "^0.0.20",
-    "@types/eslint": "^9.6.1",
-    "@types/iban": "^0.0.35",
-    "@types/lodash": "^4.17.16",
-    "@types/marked": "^6.0.0",
-    "@types/node-forge": "^1.3.11",
-    "@types/node-schedule": "^2.1.7",
-    "@weblogin/trendchart-elements": "^2.0.1",
-    "@zerodevx/svelte-toast": "^0.9.6",
-    "barcode-detector": "^3.0.1",
-    "caniuse-lite": "^1.0.30001734",
-    "codenamize-ts": "1.0.2",
-    "concurrently": "^9.1.2",
-    "convert-iso-codes": "^1.0.10",
-    "cryptr": "^6.3.0",
-    "csv-stringify": "^6.5.2",
-    "daisyui": "^5.1.14",
-    "date-fns": "^4.1.0",
-    "eslint": "^9.25.1",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-svelte": "^3.5.1",
-    "flag-icons": "^7.3.2",
-    "fuse.js": "^7.1.0",
-    "globals": "^15.15.0",
-    "graphql": "^16.11.0",
-    "graphql-yoga": "^5.13.4",
-    "hotkeys-js": "^3.13.9",
-    "houdini": "^2.0.0-next.9",
-    "houdini-svelte": "^3.0.0-next.13",
-    "iban": "^0.0.14",
-    "inquirer": "^12.6.0",
-    "jose": "^6.0.10",
-    "lefthook": "^1.11.11",
-    "lodash": "^4.17.21",
-    "marked": "^15.0.10",
-    "mermaid": "^11.6.0",
-    "munkres-algorithm": "^1.0.2",
-    "nanoid": "^5.1.5",
-    "node-forge": "^1.3.1",
-    "node-schedule": "^2.1.1",
-    "numeral": "^2.0.6",
-    "openapi-fetch": "^0.13.5",
-    "openapi-typescript": "^7.6.1",
-    "openid-client": "^6.4.2",
-    "pdf-lib": "^1.17.1",
-    "postcss": "^8.5.3",
-    "postcss-load-config": "^6.0.1",
-    "prettier": "^3.5.3",
-    "prettier-plugin-svelte": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.6.0",
-    "prisma-generator-pothos-codegen": "^0.7.1",
-    "replace-special-characters": "^1.2.7",
-    "svelte": "^5.28.2",
-    "svelte-check": "^4.1.6",
-    "svelte-french-toast": "^1.2.0",
-    "svelte-inspect-value": "^0.8.0-next.8",
-    "svelte-table": "^0.6.4",
-    "sveltekit-breadcrumbs": "^0.0.3",
-    "sveltekit-search-params": "^3.0.0",
-    "sveltekit-superforms": "^2.27.1",
-    "tailwindcss": "^4.1.0",
-    "tsup": "^8.4.0",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.31.0",
-    "uuid": "^11.1.0",
-    "validator": "^13.15.0",
-    "vanilla-cookieconsent": "^3.1.0",
-    "vite": "^7.0.0",
-    "with-csv": "^2.0.0",
-    "world-countries": "^5.1.0",
-    "zod": "^3.24.3",
-    "zod-to-json-schema": "^3.24.6"
-  },
-  "name": "munify-delegator",
-  "private": true,
-  "resolutions": {
-    "devalue": "5.3.2",
-    "form-data": "4.0.4"
-  },
-  "scripts": {
-    "add-translation": "bun run scripts/add_new_translation.ts",
-    "build": "vite build && bun ./scripts/tasksBuild.ts",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "dev": "concurrently \"bun run dev:server\" \"bun run dev:docker\"",
-    "dev:docker": "docker compose -f ./dev.docker-compose.yml up",
-    "dev:server": "while true; do svelte-kit sync && vite; echo '🔄 Server crashed, restarting...'; sleep 1; done",
-    "format": "prettier --write .",
-    "install-git-hooks": "bunx lefthook install",
-    "lint": "prettier --check . && eslint .",
-    "machine-translate": "inlang machine translate --project project.inlang",
-    "preview": "vite preview",
-    "studio": "prisma studio",
-    "typecheck": "tsc --noEmit"
-  },
-  "type": "module",
-  "version": "0.0.1"
+	"dependencies": {
+		"svelte-kit": "^1.2.0"
+	},
+	"devDependencies": {
+		"@bwip-js/browser": "^4.6.0",
+		"@casl/ability": "^6.7.3",
+		"@casl/prisma": "^1.5.1",
+		"@deutschemodelunitednations/corporate-identity": "^1.1.9",
+		"@dipser/epc-qr-code.js": "^1.0.3",
+		"@eslint/compat": "^1.2.8",
+		"@faker-js/faker": "^9.9.0",
+		"@fontsource/outfit": "^5.2.5",
+		"@fontsource/roboto-mono": "^5.2.5",
+		"@fontsource/vollkorn": "^5.2.6",
+		"@inlang/cli": "^3.0.12",
+		"@inlang/paraglide-js": "2.3.2",
+		"@magidoc/plugin-svelte-marked": "^6.2.0",
+		"@opentelemetry/exporter-trace-otlp-http": "^0.57.2",
+		"@opentelemetry/instrumentation": "^0.57.2",
+		"@opentelemetry/instrumentation-http": "^0.57.2",
+		"@opentelemetry/sdk-trace-node": "^1.30.1",
+		"@opentelemetry/semantic-conventions": "^1.32.0",
+		"@pothos/core": "^4.6.0",
+		"@pothos/plugin-complexity": "^4.1.0",
+		"@pothos/plugin-prisma": "^4.6.0",
+		"@pothos/plugin-prisma-utils": "^1.3.0",
+		"@pothos/plugin-simple-objects": "^4.1.1",
+		"@pothos/plugin-tracing": "^1.1.0",
+		"@pothos/tracing-opentelemetry": "^1.1.0",
+		"@prisma/client": "^6.6.0",
+		"@prisma/instrumentation": "^6.6.0",
+		"@slack/webhook": "^7.0.5",
+		"@svelte-plugins/datepicker": "^1.0.11",
+		"@svelte-put/qr": "^2.1.0",
+		"@sveltejs/adapter-node": "^5.2.12",
+		"@sveltejs/kit": "^2.20",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@tailwindcss/typography": "^0.5.18",
+		"@tailwindcss/vite": "^4.1.0",
+		"@thisux/sveltednd": "^0.0.20",
+		"@types/eslint": "^9.6.1",
+		"@types/iban": "^0.0.35",
+		"@types/lodash": "^4.17.16",
+		"@types/marked": "^6.0.0",
+		"@types/node-forge": "^1.3.11",
+		"@types/node-schedule": "^2.1.7",
+		"@weblogin/trendchart-elements": "^2.0.1",
+		"@zerodevx/svelte-toast": "^0.9.6",
+		"barcode-detector": "^3.0.1",
+		"caniuse-lite": "^1.0.30001734",
+		"codenamize-ts": "1.0.2",
+		"concurrently": "^9.1.2",
+		"convert-iso-codes": "^1.0.10",
+		"cryptr": "^6.3.0",
+		"csv-stringify": "^6.5.2",
+		"daisyui": "^5.1.14",
+		"date-fns": "^4.1.0",
+		"eslint": "^9.25.1",
+		"eslint-config-prettier": "^10.1.2",
+		"eslint-plugin-svelte": "^3.5.1",
+		"flag-icons": "^7.3.2",
+		"fuse.js": "^7.1.0",
+		"globals": "^15.15.0",
+		"graphql": "^16.11.0",
+		"graphql-yoga": "^5.13.4",
+		"hotkeys-js": "^3.13.9",
+		"houdini": "^2.0.0-next.9",
+		"houdini-svelte": "^3.0.0-next.13",
+		"iban": "^0.0.14",
+		"inquirer": "^12.6.0",
+		"jose": "^6.0.10",
+		"lefthook": "^1.11.11",
+		"lodash": "^4.17.21",
+		"marked": "^15.0.10",
+		"mermaid": "^11.6.0",
+		"munkres-algorithm": "^1.0.2",
+		"nanoid": "^5.1.5",
+		"node-forge": "^1.3.1",
+		"node-schedule": "^2.1.1",
+		"numeral": "^2.0.6",
+		"openapi-fetch": "^0.13.5",
+		"openapi-typescript": "^7.6.1",
+		"openid-client": "^6.4.2",
+		"pdf-lib": "^1.17.1",
+		"postcss": "^8.5.3",
+		"postcss-load-config": "^6.0.1",
+		"prettier": "^3.5.3",
+		"prettier-plugin-svelte": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"prisma": "^6.6.0",
+		"prisma-generator-pothos-codegen": "^0.7.1",
+		"replace-special-characters": "^1.2.7",
+		"svelte": "^5.28.2",
+		"svelte-check": "^4.1.6",
+		"svelte-french-toast": "^1.2.0",
+		"svelte-inspect-value": "^0.8.0-next.8",
+		"svelte-table": "^0.6.4",
+		"sveltekit-breadcrumbs": "^0.0.3",
+		"sveltekit-search-params": "^3.0.0",
+		"sveltekit-superforms": "^2.27.1",
+		"tailwindcss": "^4.1.0",
+		"tsup": "^8.4.0",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.31.0",
+		"uuid": "^11.1.0",
+		"validator": "^13.15.0",
+		"vanilla-cookieconsent": "^3.1.0",
+		"vaul-svelte": "^0.3.2",
+		"vite": "^7.0.0",
+		"with-csv": "^2.0.0",
+		"world-countries": "^5.1.0",
+		"zod": "^3.24.3",
+		"zod-to-json-schema": "^3.24.6"
+	},
+	"name": "munify-delegator",
+	"private": true,
+	"resolutions": {
+		"devalue": "5.3.2",
+		"form-data": "4.0.4"
+	},
+	"scripts": {
+		"add-translation": "bun run scripts/add_new_translation.ts",
+		"build": "vite build && bun ./scripts/tasksBuild.ts",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"dev": "concurrently \"bun run dev:server\" \"bun run dev:docker\"",
+		"dev:docker": "docker compose -f ./dev.docker-compose.yml up",
+		"dev:server": "while true; do svelte-kit sync && vite; echo '🔄 Server crashed, restarting...'; sleep 1; done",
+		"format": "prettier --write .",
+		"install-git-hooks": "bunx lefthook install",
+		"lint": "prettier --check . && eslint .",
+		"machine-translate": "inlang machine translate --project project.inlang",
+		"preview": "vite preview",
+		"studio": "prisma studio",
+		"typecheck": "tsc --noEmit"
+	},
+	"type": "module",
+	"version": "0.0.1"
 }
