--- a/package.json
+++ b/package.json
@@ -3,16 +3,13 @@
 		"svelte-kit": "^1.2.0"
 	},
 	"devDependencies": {
-		"@bwip-js/browser": "^4.6.0",
+		"@bwip-js/browser": "^4.7.0",
 		"@casl/ability": "^6.7.3",
-		"@casl/prisma": "^1.5.1",
+		"@casl/prisma": "^1.5.2",
 		"@deutschemodelunitednations/corporate-identity": "^1.1.9",
 		"@dipser/epc-qr-code.js": "^1.0.3",
-		"@eslint/compat": "^1.2.8",
+		"@eslint/compat": "^1.4.0",
 		"@faker-js/faker": "^9.9.0",
-		"@fontsource/outfit": "^5.2.5",
-		"@fontsource/roboto-mono": "^5.2.5",
-		"@fontsource/vollkorn": "^5.2.6",
 		"@inlang/cli": "^3.0.12",
 		"@inlang/paraglide-js": "2.3.2",
 		"@magidoc/plugin-svelte-marked": "^6.2.0",
@@ -20,96 +17,96 @@
 		"@opentelemetry/instrumentation": "^0.57.2",
 		"@opentelemetry/instrumentation-http": "^0.57.2",
 		"@opentelemetry/sdk-trace-node": "^1.30.1",
-		"@opentelemetry/semantic-conventions": "^1.32.0",
-		"@pothos/core": "^4.6.0",
-		"@pothos/plugin-complexity": "^4.1.0",
-		"@pothos/plugin-prisma": "^4.6.0",
-		"@pothos/plugin-prisma-utils": "^1.3.0",
-		"@pothos/plugin-simple-objects": "^4.1.1",
-		"@pothos/plugin-tracing": "^1.1.0",
-		"@pothos/tracing-opentelemetry": "^1.1.0",
-		"@prisma/client": "^6.6.0",
-		"@prisma/instrumentation": "^6.6.0",
-		"@slack/webhook": "^7.0.5",
+		"@opentelemetry/semantic-conventions": "^1.37.0",
+		"@pothos/core": "^4.9.1",
+		"@pothos/plugin-complexity": "^4.1.2",
+		"@pothos/plugin-prisma": "^4.11.0",
+		"@pothos/plugin-prisma-utils": "^1.3.3",
+		"@pothos/plugin-simple-objects": "^4.1.3",
+		"@pothos/plugin-tracing": "^1.1.2",
+		"@pothos/tracing-opentelemetry": "^1.1.3",
+		"@prisma/client": "^6.16.2",
+		"@prisma/instrumentation": "^6.16.2",
+		"@slack/webhook": "^7.0.6",
 		"@svelte-plugins/datepicker": "^1.0.11",
 		"@svelte-put/qr": "^2.1.0",
-		"@sveltejs/adapter-node": "^5.2.12",
-		"@sveltejs/kit": "^2.20",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@sveltejs/adapter-node": "^5.3.2",
+		"@sveltejs/kit": "^2.43.2",
+		"@sveltejs/vite-plugin-svelte": "^5.1.1",
 		"@tailwindcss/typography": "^0.5.18",
-		"@tailwindcss/vite": "^4.1.0",
+		"@tailwindcss/vite": "^4.1.13",
 		"@thisux/sveltednd": "^0.0.20",
 		"@types/eslint": "^9.6.1",
 		"@types/iban": "^0.0.35",
-		"@types/lodash": "^4.17.16",
+		"@types/lodash": "^4.17.20",
 		"@types/marked": "^6.0.0",
-		"@types/node-forge": "^1.3.11",
-		"@types/node-schedule": "^2.1.7",
+		"@types/node-forge": "^1.3.14",
+		"@types/node-schedule": "^2.1.8",
 		"@weblogin/trendchart-elements": "^2.0.1",
 		"@zerodevx/svelte-toast": "^0.9.6",
-		"barcode-detector": "^3.0.1",
-		"caniuse-lite": "^1.0.30001734",
+		"barcode-detector": "^3.0.5",
+		"caniuse-lite": "^1.0.30001743",
 		"codenamize-ts": "1.0.2",
-		"concurrently": "^9.1.2",
+		"concurrently": "^9.2.1",
 		"convert-iso-codes": "^1.0.10",
-		"cryptr": "^6.3.0",
-		"csv-stringify": "^6.5.2",
+		"cryptr": "^6.4.0",
+		"csv-stringify": "^6.6.0",
 		"daisyui": "^5.1.14",
 		"date-fns": "^4.1.0",
-		"eslint": "^9.25.1",
-		"eslint-config-prettier": "^10.1.2",
-		"eslint-plugin-svelte": "^3.5.1",
-		"flag-icons": "^7.3.2",
+		"eslint": "^9.36.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-svelte": "^3.12.4",
+		"flag-icons": "^7.5.0",
 		"fuse.js": "^7.1.0",
 		"globals": "^15.15.0",
 		"graphql": "^16.11.0",
-		"graphql-yoga": "^5.13.4",
-		"hotkeys-js": "^3.13.9",
-		"houdini": "^2.0.0-next.9",
+		"graphql-yoga": "^5.16.0",
+		"hotkeys-js": "^3.13.15",
+		"houdini": "^2.0.0-next.10",
 		"houdini-svelte": "^3.0.0-next.13",
 		"iban": "^0.0.14",
-		"inquirer": "^12.6.0",
-		"jose": "^6.0.10",
-		"lefthook": "^1.11.11",
+		"inquirer": "^12.9.6",
+		"jose": "^6.1.0",
+		"lefthook": "^1.13.4",
 		"lodash": "^4.17.21",
-		"marked": "^15.0.10",
-		"mermaid": "^11.6.0",
+		"marked": "^15.0.12",
+		"mermaid": "^11.12.0",
 		"munkres-algorithm": "^1.0.2",
-		"nanoid": "^5.1.5",
+		"nanoid": "^5.1.6",
 		"node-forge": "^1.3.1",
 		"node-schedule": "^2.1.1",
 		"numeral": "^2.0.6",
-		"openapi-fetch": "^0.13.5",
-		"openapi-typescript": "^7.6.1",
-		"openid-client": "^6.4.2",
+		"openapi-fetch": "^0.13.8",
+		"openapi-typescript": "^7.9.1",
+		"openid-client": "^6.8.0",
 		"pdf-lib": "^1.17.1",
-		"postcss": "^8.5.3",
+		"postcss": "^8.5.6",
 		"postcss-load-config": "^6.0.1",
-		"prettier": "^3.5.3",
-		"prettier-plugin-svelte": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.11",
-		"prisma": "^6.6.0",
+		"prettier": "^3.6.2",
+		"prettier-plugin-svelte": "^3.4.0",
+		"prettier-plugin-tailwindcss": "^0.6.14",
+		"prisma": "^6.16.2",
 		"prisma-generator-pothos-codegen": "^0.7.1",
 		"replace-special-characters": "^1.2.7",
-		"svelte": "^5.28.2",
-		"svelte-check": "^4.1.6",
+		"svelte": "^5.39.5",
+		"svelte-check": "^4.3.2",
 		"svelte-french-toast": "^1.2.0",
-		"svelte-inspect-value": "^0.8.0-next.8",
-		"svelte-table": "^0.6.4",
+		"svelte-inspect-value": "^0.8.5",
+		"svelte-table": "^0.6.5",
 		"sveltekit-breadcrumbs": "^0.0.3",
 		"sveltekit-search-params": "^3.0.0",
 		"sveltekit-superforms": "^2.27.1",
-		"tailwindcss": "^4.1.0",
-		"tsup": "^8.4.0",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.31.0",
+		"tailwindcss": "^4.1.13",
+		"tsup": "^8.5.0",
+		"typescript": "^5.9.2",
+		"typescript-eslint": "^8.44.1",
 		"uuid": "^11.1.0",
-		"validator": "^13.15.0",
+		"validator": "^13.15.15",
 		"vanilla-cookieconsent": "^3.1.0",
-		"vite": "^7.0.0",
+		"vite": "^7.1.7",
 		"with-csv": "^2.0.0",
 		"world-countries": "^5.1.0",
-		"zod": "^3.24.3",
+		"zod": "^3.25.76",
 		"zod-to-json-schema": "^3.24.6"
 	},
 	"name": "munify-delegator",
