--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,9 @@ PUBLIC_OIDC_CLIENT_ID=default
 PUBLIC_GLOBAL_USER_NOTES_ACTIVE=true
 PUBLIC_MAX_APPLICATION_TEXT_LENGTH=1200
 
+OIDC_SCOPES="openid profile offline_access address email family_name gender given_name locale name phone preferred_username urn:zitadel:iam:org:projects:roles urn:zitadel:iam:user:metadata urn:zitadel:iam:org:project:id:zitadel:aud"
 OIDC_ROLE_CLAIM=urn:zitadel:iam:org:project:275671427955294244:roles
+
 PUBLIC_FEEDBACK_URL=https://fb-delegator.dmun.de
 
 # OTEL_ENDPOINT_URL=http://localhost:4318/v1/traces
