--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,25 @@
 {
-	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
 		"allowJs": true,
-		"noImplicitAny": false,
-		"checkJs": true,
-		"module": "ESNext", // or "CommonJS"
-		"target": "ESNext", // or "ES6"
 		"allowSyntheticDefaultImports": true, // This should be true as well
+		"checkJs": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
-		"skipLibCheck": true,
-		"sourceMap": true,
-		"strict": true,
+		"module": "ESNext", // or "CommonJS"
 		"moduleResolution": "bundler",
+		"noImplicitAny": false,
 		"plugins": [
 			{
 				"name": "@0no-co/graphqlsp",
 				"schema": "./src/lib/gqlClient/schema.gql"
 			}
 		],
-		"rootDirs": [".", "./.svelte-kit/types", "./.houdini/types"]
-	}
+		"resolveJsonModule": true,
+		"rootDirs": [".", "./.svelte-kit/types", "./.houdini/types"],
+		"skipLibCheck": true,
+		"sourceMap": true,
+		"strict": true,
+		"target": "ESNext" // or "ES6"
+	},
+	"extends": "./.svelte-kit/tsconfig.json"
 }
