🚀 Enhancement: Revamp issue templates for bug reports, documentation, feature requests, and tasks

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,11 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Suggest a feature
-    url: https://github.com/deutschemodelunitednations/munify-delegator/discussions/categories/ideas-feature-requests
-    about: Please use the ideas tab of the discussion section to request and discuss new features.
-  - name: Ask a question or recieve help
+  - name: Ask a question or receive help
     url: https://github.com/deutschemodelunitednations/munify-delegator/discussions/categories/support
-    about: Please use the help tab of the discussion section to recieve help and ask questions.
+    about: Please use the help tab of the discussion section to receive help and ask questions.
+  - name: Suggest a feature or enhancement
+    url: https://github.com/deutschemodelunitednations/munify-delegator/discussions/categories/feature-requests
+    about: Please use the feature request tab of the discussion section to suggest new features or enhancements.
+  - name: General Discussion
+    url: https://github.com/deutschemodelunitednations/munify-delegator/discussions
+    about: For general discussions about the project that don't fit into a specific issue template.
