🚀 Enhancement: Remove outdated pull request templates and update release configuration for improved changelog categorization

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -7,14 +7,13 @@ changelog:
   categories:
     - title: ✨ Features
       labels:
-        - feature
+        - 'PR: Feature'
     - title: 🚀 Enhancment
       labels:
         - enhancement
     - title: 🐞 Bug Fixes
       labels:
-        - bug
-        - bug (high priority)
+        - 'PR: Bug'
     - title: 📚 Documentation
       labels:
         - documentation
