--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ PUBLIC_FEEDBACK_URL=https://fb-delegator.dmun.de
 # OTEL_ENDPOINT_URL=http://localhost:4318/v1/traces
 
 CERTIFICATE_SECRET="<yourSecret>" # Replace with your own secret key for signing certificates / run `openssl rand -base64 32`
+
+PUBLIC_MAINTENANCE_WINDOW_START=2025-10-22T00:00:00Z
+PUBLIC_MAINTENANCE_WINDOW_END=2025-10-22T04:00:00Z
+
