--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"concurrently": "^9.2.1",
 		"convert-iso-codes": "^1.0.10",
 		"cryptr": "^6.4.0",
+		"csv-parse": "^5.4.9",
 		"csv-stringify": "^6.6.0",
 		"daisyui": "^5.3.7",
 		"date-fns": "^4.1.0",
@@ -70,6 +71,7 @@
 		"inquirer": "^12.10.0",
 		"jose": "^6.1.0",
 		"lefthook": "^1.13.6",
+		"leaflet.markercluster": "^1.5.3",
 		"lodash": "^4.17.21",
 		"marked": "^15.0.12",
 		"mermaid": "^11.12.0",
@@ -90,6 +92,7 @@
 		"prisma": "^6.17.1",
 		"prisma-generator-pothos-codegen": "^0.7.1",
 		"replace-special-characters": "^1.2.7",
+		"sveaflet": "^0.1.4",
 		"svelte": "^5.41.0",
 		"svelte-check": "^4.3.3",
 		"svelte-french-toast": "^1.2.0",
