✨ feat: Map view of German participants

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
 		"inquirer": "^12.10.0",
 		"jose": "^6.1.0",
 		"lefthook": "^1.13.6",
-		"leaflet.markercluster": "^1.5.3",
+		"leaflet": "^1.9.4",
 		"lodash": "^4.17.21",
 		"marked": "^15.0.12",
 		"mermaid": "^11.12.0",
@@ -93,6 +93,7 @@
 		"prisma-generator-pothos-codegen": "^0.7.1",
 		"replace-special-characters": "^1.2.7",
 		"sveaflet": "^0.1.4",
+		"sveaflet-markercluster": "^0.0.3",
 		"svelte": "^5.41.0",
 		"svelte-check": "^4.3.3",
 		"svelte-french-toast": "^1.2.0",
