feat: Group Payments

--- a/.prettierrc
+++ b/.prettierrc
@@ -8,7 +8,7 @@
 			}
 		}
 	],
-	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss", "prettier-plugin-sort-json"],
+	"plugins": ["prettier-plugin-tailwindcss", "prettier-plugin-svelte", "prettier-plugin-sort-json"],
 	"printWidth": 100,
 	"singleQuote": true,
 	"trailingComma": "none",
