--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
 	"dependencies": {
 		"commander": "^14.0.2",
+		"humanparser": "^2.7.0",
 		"prettier-plugin-sort-json": "^4.1.1",
 		"svelte-kit": "^1.2.0"
 	},
 	"devDependencies": {
-		"@bwip-js/browser": "^4.7.0",
+		"@bwip-js/browser": "^4.8.0",
 		"@casl/ability": "^6.7.3",
 		"@casl/prisma": "^1.5.2",
 		"@deutschemodelunitednations/corporate-identity": "^1.1.10",
 		"@dipser/epc-qr-code.js": "^1.0.3",
-		"@eslint/compat": "^1.4.0",
+		"@eslint/compat": "^1.4.1",
 		"@faker-js/faker": "^9.9.0",
 		"@inlang/cli": "^3.0.12",
 		"@inlang/paraglide-js": "2.3.2",
-		"@magidoc/plugin-svelte-marked": "^6.2.0",
+		"@magidoc/plugin-svelte-marked": "^6.3.0",
 		"@opentelemetry/exporter-trace-otlp-http": "^0.57.2",
 		"@opentelemetry/instrumentation": "^0.57.2",
 		"@opentelemetry/instrumentation-http": "^0.57.2",
 		"@opentelemetry/sdk-trace-node": "^1.30.1",
-		"@opentelemetry/semantic-conventions": "^1.37.0",
+		"@opentelemetry/semantic-conventions": "^1.38.0",
 		"@pothos/core": "^4.10.0",
 		"@pothos/plugin-complexity": "^4.1.2",
 		"@pothos/plugin-prisma": "^4.12.0",
@@ -27,56 +28,59 @@
 		"@pothos/plugin-simple-objects": "^4.1.3",
 		"@pothos/plugin-tracing": "^1.1.2",
 		"@pothos/tracing-opentelemetry": "^1.1.3",
-		"@prisma/client": "^6.17.1",
-		"@prisma/instrumentation": "^6.17.1",
+		"@prisma/client": "^6.19.0",
+		"@prisma/instrumentation": "^6.19.0",
 		"@slack/webhook": "^7.0.6",
 		"@svelte-plugins/datepicker": "^1.0.11",
 		"@svelte-put/qr": "^2.1.1",
 		"@sveltejs/adapter-node": "^5.4.0",
-		"@sveltejs/kit": "^2.47.2",
+		"@sveltejs/kit": "^2.49.1",
 		"@sveltejs/vite-plugin-svelte": "^5.1.1",
 		"@tailwindcss/typography": "^0.5.19",
-		"@tailwindcss/vite": "^4.1.14",
+		"@tailwindcss/vite": "^4.1.17",
 		"@thisux/sveltednd": "^0.0.20",
 		"@types/eslint": "^9.6.1",
 		"@types/iban": "^0.0.35",
-		"@types/lodash": "^4.17.20",
+		"@types/lodash": "^4.17.21",
 		"@types/marked": "^6.0.0",
 		"@types/node-forge": "^1.3.14",
 		"@types/node-schedule": "^2.1.8",
+		"@vitest/coverage-v8": "^4.0.15",
 		"@weblogin/trendchart-elements": "^2.0.1",
 		"@zerodevx/svelte-toast": "^0.9.6",
-		"barcode-detector": "^3.0.6",
-		"caniuse-lite": "^1.0.30001751",
+		"barcode-detector": "^3.0.8",
+		"c8": "^10.1.3",
+		"caniuse-lite": "^1.0.30001759",
 		"codenamize-ts": "1.0.2",
 		"concurrently": "^9.2.1",
 		"convert-iso-codes": "^1.0.10",
 		"cryptr": "^6.4.0",
 		"csv-stringify": "^6.6.0",
-		"daisyui": "^5.3.7",
+		"daisyui": "^5.5.5",
 		"date-fns": "^4.1.0",
-		"dayjs": "^1.11.18",
-		"eslint": "^9.38.0",
+		"dayjs": "^1.11.19",
+		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.12.5",
+		"eslint-plugin-svelte": "^3.13.0",
 		"flag-icons": "^7.5.0",
 		"fuse.js": "^7.1.0",
 		"globals": "^15.15.0",
-		"graphql": "^16.11.0",
-		"graphql-yoga": "^5.16.0",
+		"graphql": "^16.12.0",
+		"graphql-yoga": "^5.17.1",
 		"hotkeys-js": "^3.13.15",
 		"houdini": "^2.0.0-next.11",
 		"houdini-svelte": "^3.0.0-next.13",
 		"iban": "^0.0.14",
-		"inquirer": "^12.10.0",
-		"jose": "^6.1.0",
+		"inquirer": "^12.11.1",
+		"jose": "^6.1.3",
+		"jsdom": "^27.2.0",
 		"lefthook": "^1.13.6",
 		"lodash": "^4.17.21",
 		"marked": "^15.0.12",
-		"mermaid": "^11.12.0",
+		"mermaid": "^11.12.2",
 		"munkres-algorithm": "^1.0.2",
 		"nanoid": "^5.1.6",
-		"node-forge": "^1.3.1",
+		"node-forge": "^1.3.3",
 		"node-schedule": "^2.1.1",
 		"numeral": "^2.0.6",
 		"openapi-fetch": "^0.13.8",
@@ -85,32 +89,33 @@
 		"pdf-lib": "^1.17.1",
 		"postcss": "^8.5.6",
 		"postcss-load-config": "^6.0.1",
-		"prettier": "^3.6.2",
+		"prettier": "^3.7.4",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.14",
-		"prisma": "^6.17.1",
+		"prisma": "^6.19.0",
 		"prisma-generator-pothos-codegen": "^0.7.1",
 		"replace-special-characters": "^1.2.7",
-		"svelte": "^5.41.0",
-		"svelte-check": "^4.3.3",
+		"svelte": "^5.45.4",
+		"svelte-check": "^4.3.4",
 		"svelte-french-toast": "^1.2.0",
 		"svelte-inspect-value": "^0.8.5",
 		"svelte-table": "^0.6.5",
 		"sveltekit-breadcrumbs": "^0.0.3",
 		"sveltekit-search-params": "^3.0.0",
-		"sveltekit-superforms": "^2.28.0",
-		"tailwindcss": "^4.1.14",
-		"tsup": "^8.5.0",
+		"sveltekit-superforms": "^2.28.1",
+		"tailwindcss": "^4.1.17",
+		"tsup": "^8.5.1",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.46.1",
+		"typescript-eslint": "^8.48.1",
 		"uuid": "^11.1.0",
-		"validator": "^13.15.15",
+		"validator": "^13.15.23",
 		"vanilla-cookieconsent": "^3.1.0",
-		"vite": "^7.1.11",
+		"vite": "^7.2.6",
+		"vitest": "^4.0.15",
 		"with-csv": "^2.0.0",
 		"world-countries": "^5.1.0",
-		"zod": "^4.1.12",
-		"zod-to-json-schema": "^3.24.6"
+		"zod": "^4.1.13",
+		"zod-to-json-schema": "^3.25.0"
 	},
 	"name": "munify-delegator",
 	"private": true,
@@ -132,7 +137,10 @@
 		"machine-translate": "inlang machine translate --project project.inlang",
 		"preview": "vite preview",
 		"studio": "prisma studio",
-		"typecheck": "tsc --noEmit"
+		"typecheck": "tsc --noEmit",
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"coverage": "vitest run --coverage"
 	},
 	"type": "module",
 	"version": "0.0.1"
