--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@faker-js/faker": "^9.9.0",
 		"@inlang/cli": "^3.0.12",
 		"@inlang/paraglide-js": "2.3.2",
+		"@lingual/i18n-check": "^0.8.14",
 		"@magidoc/plugin-svelte-marked": "^6.3.0",
 		"@opentelemetry/exporter-trace-otlp-http": "^0.57.2",
 		"@opentelemetry/instrumentation": "^0.57.2",
@@ -134,7 +135,9 @@
 		"format": "prettier --write .",
 		"install-git-hooks": "bunx lefthook install",
 		"lint": "prettier --check . && eslint .",
-		"machine-translate": "inlang machine translate --project project.inlang",
+		"i18n:check": "i18n-check --source \"de\" --locales ./messages --format \"i18next\"",
+		"i18n:validate": "inlang validate --project project.inlang",
+		"i18n:translate": "inlang machine translate --project project.inlang",
 		"preview": "vite preview",
 		"studio": "prisma studio",
 		"typecheck": "tsc --noEmit",
