--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,4 +13,4 @@ jobs:
       - run: bun install
       - run: bunx svelte-kit sync
       - run: bun run lint
-      - run: bun test
+      - run: bun run test
