--- a/.github/workflows/i18n.yml
+++ b/.github/workflows/i18n.yml
@@ -12,10 +12,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@master
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Install Dependencies
-        run: bun install
+      - name: Set up bun
+        uses: oven-sh/setup-bun@v2
+
+      - name: Install dependencies
+        run: bun i --frozen-lockfile
 
       - name: i18n Check
         run: bun run i18n:check
